cmake_minimum_required(VERSION 2.8)
set(CMAKE_LEGACY_CYGWIN_WIN32 0)
project(ZedCap)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "-std=c++11")
find_package(OpenCV REQUIRED)
find_package(Boost COMPONENTS filesystem system serialization iostreams thread REQUIRED)
find_package(ZED REQUIRED)
find_package(CUDA REQUIRED)
find_package(Eigen3 REQUIRED)
find_library (LibTinyXML2 tinyxml2)

include_directories( ${OpenCV_INCLUDE_DIRS} ${ZED_INCLUDE_DIRS} ${CUDA_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR} ../zebravision)
link_directories(${ZED_INCLUDE_DIRS})
link_directories(${CUDA_INCLUDE_DIRS})
set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g -Wall -Ofast")
 
add_definitions(-DZED_SUPPORT)

add_executable( ZedCap ZedCap.cpp ../zebravision/mediain.cpp ../zebravision/zedin.cpp ../zebravision/zedcamerain.cpp ../zebravision/zmsin.cpp ../zebravision/ZvSettings.cpp ../zebravision/portable_binary_iarchive.cpp ../zebravision/portable_binary_oarchive.cpp)
target_link_libraries( ZedCap ${OpenCV_LIBS} ${ZED_LIBRARIES} ${CUDA_LIBRARIES} ${Boost_LIBRARIES} ${LibTinyXML2})
