cmake_minimum_required(VERSION 2.8)
set(CMAKE_LEGACY_CYGWIN_WIN32 0) # Remove when CMake >= 2.8.4 is required
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -Ofast -flto")
set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS} -Ofast -flto")
project( framegrabber )
find_package( OpenCV REQUIRED )
add_executable( framegrabber framegrabber.cpp)
target_link_libraries( framegrabber ${OpenCV_LIBS} )

project(GenInitNegFromVideo)
find_package( Boost 1.54 COMPONENTS filesystem system thread program_options REQUIRED )
include_directories( ${Boost_INCLUDE_DIR} )
add_executable( GenInitNegFromVideo GenerateInitNegFromVideo.cpp utilities_common.cpp)
target_link_libraries( GenInitNegFromVideo ${OpenCV_LIBS} ${Boost_LIBRARIES}) 

project(GenInitNegFromFile)
find_package( Boost 1.54 COMPONENTS filesystem system thread program_options REQUIRED )
include_directories( ${Boost_INCLUDE_DIR} )
add_executable( GenInitNegFromFile GenerateInitNegFromFile.cpp utilities_common.cpp)
target_link_libraries( GenInitNegFromFile ${OpenCV_LIBS} ${Boost_LIBRARIES}) 

include_directories ( ../imageclipper/src )
add_executable( regrab regrab.cpp )
target_link_libraries( regrab ${OpenCV_LIBS} )
