cmake_minimum_required(VERSION 2.8)
set(CMAKE_BUILD_TYPE Release)
project( goal_detect )
set(CMAKE_CXX_FLAGS "-std=c++11 -DZED_SUPPORT -Wall")
set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};../zebravision/cmake")
find_package(OpenCV REQUIRED )
find_package(ZED REQUIRED)
find_package(CUDA REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(Boost COMPONENTS filesystem system serialization iostreams thread REQUIRED)
find_package(ZMQ REQUIRED)
find_library (LibTinyXML2 tinyxml2)

include_directories( ${OpenCV_INCLUDE_DIRS} ${ZMQ_INCLUDE_DIRS} ${ZED_INCLUDE_DIRS} ${CUDA_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ../zebravision ..)

link_directories(${ZED_LIBRARY_DIR})
link_directories(${CUDA_LIBRARY_DIRS} /usr/local/cuda/lib64/stubs)

add_executable( goal_detect goal_detect.cpp ../zebravision/GoalDetector.cpp ../zebravision/mediain.cpp ../zebravision/syncin.cpp ../zebravision/asyncin.cpp ../zebravision/zedcamerain.cpp ../zebravision/zedsvoin.cpp ../zebravision/zmsin.cpp ../zebravision/cameraparams.cpp ../zebravision/zedparams.cpp ../zebravision/Utilities.cpp ../zebravision/objtype.cpp ../zebravision/track3d.cpp ../zebravision/kalman.cpp ../zebravision/hungarian.cpp ../zebravision/portable_binary_iarchive.cpp ../zebravision/portable_binary_oarchive.cpp ../zebravision/ZvSettings.cpp)
target_link_libraries( goal_detect ${OpenCV_LIBS} ${ZED_LIBRARIES} ${CUDA_LIBRARIES} ${CUDA_nppi_LIBRARY} ${CUDA_npps_LIBRARY} ${Boost_LIBRARIES} ${ZMQ_LIBRARIES} ${LibTinyXML2})
